fixed dark mode at channel bar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,7 @@
   }
 
   .channel-rooms-room {
-    @apply flex items-center w-auto gap-1 p-1 px-2 mx-4 transition-all rounded-md hover:bg-gray-200;
+    @apply flex items-center w-auto gap-1 p-1 px-2 mx-4 transition-all rounded-md hover:bg-gray-200 dark:hover:bg-gray-700;
   }
 
   .user-info {
